<resources>
    <string name="app_name">QGMusic</string>
    <string name="Login">登录</string>
    <string name="forgot_password">忘记密码</string>
    <string name="new_user">新用户</string>
    <string name="nickname">账号</string>
    <string name="phone_number">手机号</string>
    <string name="code">验证码</string>
    <string name="send_code">发送验证码</string>
    <string name="password">密码</string>
    <string name="register">注册</string>
    <string name="confirm_password">确认密码</string>
    <string name="confirm">确认</string>
    <string name="drawer_menu_exit">退出</string>
    <string name="drawer_menu_search">搜索</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="search_queue_title">Search results</string>
    <string name="random_queue_title">Random music</string>
    <string name="browse_musics_by_genre_subtitle">%1$s songs</string>

    <string name="play_next">播放下一首</string>
    <string name="play_time">--:--</string>
    <string name="play_no_resource">无音乐</string>
    <string name="play_mode">%1$s("%2$d")</string>
    <string name="play_mode_random">随机播放</string>
    <string name="play_mode_repeat">单曲播放</string>
    <string name="play_mode_loop">顺序播放</string>
    <string name="artist_tips">歌手 - 专辑</string>
    <string name="song_operate">歌曲操作</string>
    <string name="search_lyric">在线搜词</string>
    <string name="action_search">在线搜歌</string>
    <string name="delete">删除</string>
    <string name="pause">暂停</string>
    <string name="start">开始</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_main3">Main3Activity</string>
</resources>
