<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/de_frm_backgroud"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/rg_img_backgroud"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="-50dp"
            android:layout_marginRight="-300dp"
            android:scaleType="centerCrop"
            android:src="@drawable/de_bg" />

    </FrameLayout>

    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.shanshui.musicapp.mvp.ui.widget.ClearWriteEditText
            android:id="@+id/forget_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/rc_ed_public_service_search_selector"
            android:drawablePadding="5dip"
            android:hint="@string/phone_number"
            android:maxLength="11"
            android:maxLines="1"
            android:paddingLeft="10dip"
            android:paddingRight="10dip"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="40dp"
            android:orientation="horizontal">


            <com.shanshui.musicapp.mvp.ui.widget.ClearWriteEditText
                android:id="@+id/forget_code"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="6"
                android:background="@drawable/rc_ed_public_service_search_selector"
                android:drawablePadding="5dip"
                android:hint="@string/code"
                android:inputType="number"
                android:maxLength="6"
                android:maxLines="1"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF" />


            <com.qmuiteam.qmui.widget.roundwidget.QMUIRoundButton
                android:id="@+id/forget_getcode"
                style="@style/btn_match_parent_radius"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="20dp"
                android:layout_weight="4"
                android:clickable="false"
                android:minHeight="1dp"
                android:minWidth="1dp"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="@string/send_code"
                android:textSize="12sp"
                app:qmui_backgroundColor="#88cccccc"
                app:qmui_radius="4dp" />

        </LinearLayout>

        <com.shanshui.musicapp.mvp.ui.widget.ClearWriteEditText
            android:id="@+id/forget_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/rc_ed_public_service_search_selector"
            android:drawablePadding="5dip"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLength="16"
            android:maxLines="1"
            android:paddingLeft="10dip"
            android:paddingRight="10dip"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF" />

        <com.shanshui.musicapp.mvp.ui.widget.ClearWriteEditText
            android:id="@+id/forget_password1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/rc_ed_public_service_search_selector"
            android:drawablePadding="5dip"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:maxLength="16"
            android:maxLines="1"
            android:paddingLeft="10dip"
            android:paddingRight="10dip"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF" />

        <com.qmuiteam.qmui.widget.roundwidget.QMUIRoundButton
            android:id="@+id/forget_button"
            style="@style/btn_match_parent_radius"
            android:layout_width="match_parent"
            android:layout_height="@dimen/btn_height"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="60dp"
            android:clickable="false"
            android:text="@string/confirm"
            app:qmui_backgroundColor="#88cccccc"
            app:qmui_radius="4dp" />

    </LinearLayout>

    <TextView
        android:id="@+id/de_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:padding="15dp"
        android:text="@string/Login"
        android:textColor="#999999"
        android:textSize="14sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:padding="15dp"
        android:text="Powered by ShenHeSoft"
        android:textColor="#484848"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/de_login_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:padding="15dp"
        android:text="@string/new_user"
        android:textColor="#999999"
        android:textSize="14sp" />

</RelativeLayout>