<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <FrameLayout
        android:id="@+id/de_frm_backgroud"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/de_img_backgroud"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="-50dp"
            android:layout_marginRight="-300dp"
            android:scaleType="centerCrop"
            android:src="@drawable/de_bg" />

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/de_login_logo"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="91dip"
            android:src="@mipmap/ic_launcher" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="72dip"
            android:orientation="vertical">


            <RelativeLayout
                android:id="@+id/liner1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dip"
                android:layout_marginRight="30dip"
                android:orientation="horizontal">


                <com.shanshui.musicapp.mvp.ui.widget.ClearWriteEditText
                    android:id="@+id/de_login_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rc_ed_public_service_search_selector"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:hint="输入账号"
                    android:inputType="phone"
                    android:maxLength="11"
                    android:maxLines="1"
                    android:textColor="#FFFFFF"
                    android:textColorHint="#FFFFFF" />

                <FrameLayout
                    android:id="@+id/fr_username_delete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignRight="@+id/de_login_phone"
                    android:layout_centerVertical="true"
                    android:visibility="gone">

                </FrameLayout>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/liner2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dip"
                android:layout_marginRight="30dip"
                android:layout_marginTop="37dip"
                android:orientation="horizontal">


                <com.shanshui.musicapp.mvp.ui.widget.ClearWriteEditText
                    android:id="@+id/de_login_password"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rc_ed_public_service_search_selector"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:hint="输入密码"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textColor="#FFFFFF"
                    android:textColorHint="#FFFFFF" />

                <FrameLayout
                    android:id="@+id/fr_pass_delete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignRight="@+id/de_login_password"
                    android:layout_centerVertical="true"
                    android:visibility="gone">

                </FrameLayout>
            </RelativeLayout>


            <com.qmuiteam.qmui.widget.roundwidget.QMUIRoundButton
                android:id="@+id/de_login_sign"
                style="@style/btn_match_parent_radius"
                android:layout_width="match_parent"
                android:layout_height="@dimen/btn_height"
                app:qmui_radius="4dp"
                android:layout_marginLeft="30dip"
                android:layout_marginRight="30dip"
                android:layout_marginTop="34dip"
                android:text="@string/Login"
                android:textSize="18sp" />

        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/de_login_forgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:padding="15dp"
        android:text="@string/forgot_password"
        android:textColor="#999999"
        android:textSize="14sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:padding="15dp"
        android:text="Powered by ShenHeSoft"
        android:textColor="#484848"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/de_login_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:padding="15dp"
        android:text="@string/new_user"
        android:textColor="#999999"
        android:textSize="14sp" />

</RelativeLayout>
