<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".mvp.ui.activity.music.FullScreenPlayerActivity">

    <ImageView
        android:id="@+id/playingBgIv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription=""
        android:scaleType="centerCrop" />

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#1f000000" />

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:title="">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/backIv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/search_lyric"
                android:src="@drawable/ic_arrow_back"
                android:tint="@color/white" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/titleIv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="marquee"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:gravity="center"
                    android:marqueeRepeatLimit="marquee_forever"
                    android:singleLine="true"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp_16"
                    tools:text="歌曲名歌曲名歌曲名歌曲名歌曲名歌曲名歌曲名歌曲名歌曲名歌曲名歌曲歌曲名歌曲名歌曲" />

                <TextView
                    android:id="@+id/subTitleTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_4"
                    android:gravity="center"
                    android:lines="1"
                    android:textSize="@dimen/sp_12"
                    tools:text="@string/artist_tips" />

            </LinearLayout>

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp">

                <ImageView
                    android:id="@+id/operateSongIv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/song_operate"
                    android:src="@drawable/ic_more"
                    android:tint="@color/white" />

                <ImageView
                    android:id="@+id/searchLyricIv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/search_lyric"
                    android:src="@drawable/ic_search_lyric"
                    android:visibility="gone" />

            </FrameLayout>

        </LinearLayout>


    </android.support.v7.widget.Toolbar>



    <LinearLayout
        android:id="@+id/topContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        android:layout_gravity="top"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <com.shanshui.musicapp.mvp.ui.widget.MultiTouchViewPager
            android:id="@+id/viewPager"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

        </com.shanshui.musicapp.mvp.ui.widget.MultiTouchViewPager>

        <LinearLayout
            android:id="@+id/detailView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/progressTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:text="@string/play_time"
                    android:textColor="@color/translucent_white" />


                <SeekBar
                    android:id="@+id/progressSb"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:maxHeight="2dp"
                    android:progress="0"
                    android:tag="tint_accent_color" />


                <TextView
                    android:id="@+id/durationTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:text="@string/play_time"
                    android:textColor="@color/translucent_white" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_margin="8dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/playModeIv"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:background="?android:attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/play_mode"
                    android:gravity="center"
                    android:src="@drawable/ic_repeat" />


                <net.steamcrafted.materialiconlib.MaterialIconView
                    android:id="@+id/prevPlayIv"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:background="?android:attr/selectableItemBackgroundBorderless"
                    android:scaleType="center"
                    android:src="@drawable/ic_skip_previous"
                    app:materialIcon="skip_previous"
                    app:materialIconColor="@color/white"
                    app:materialIconSize="32dp" />

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/dp_72"
                    android:layout_weight="1"
                    android:gravity="center">

                    <android.support.design.widget.FloatingActionButton
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_margin="8dp" />

                    <com.shanshui.musicapp.mvp.ui.widget.PlayPauseView
                        android:id="@+id/playPauseIv"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_margin="8dp"
                        android:background="?android:attr/selectableItemBackgroundBorderless"
                        android:elevation="@dimen/dp_10"
                        android:scaleType="fitXY"
                        app:anim_duration="300"
                        app:bg_color="@color/transparent"
                        app:btn_color="@color/white"
                        app:elevation="10dp" />


                    <ProgressBar
                        android:id="@+id/loadingPb"
                        style="@style/Widget.AppCompat.ProgressBar"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_margin="8dp"
                        android:visibility="gone" />

                </FrameLayout>

                <net.steamcrafted.materialiconlib.MaterialIconView
                    android:id="@+id/nextPlayIv"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:background="?android:attr/selectableItemBackgroundBorderless"
                    android:scaleType="center"
                    app:materialIcon="skip_next"
                    app:materialIconColor="@color/white"
                    app:materialIconSize="32dp" />

                <net.steamcrafted.materialiconlib.MaterialIconView
                    android:id="@+id/playQueueIv"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:background="?android:attr/selectableItemBackgroundBorderless"
                    app:materialIcon="playlist_play"
                    app:materialIconColor="@color/white"
                    app:materialIconSize="24dp" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</RelativeLayout>
